Fix article end mark spacing

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -142,18 +142,20 @@ hr {
 .post:not(.noend) > .end-mark:not(:is(ol, ul))::after,
 .post:not(.noend) > .end-mark:is(ol, ul) > li:last-child::after {
   content: '❧';
-  display: inline-block;
-  margin-left: 0.2em;
+  display: inline;
+  position: relative;
+  margin-left: 0.08em;
   font-family: var(--body-font);
   line-height: 1;
   -webkit-user-select: none;
   user-select: none;
   color: var(--color-accent-default);
+  vertical-align: middle;
 }
 
 .post:lang(ja):not(.noend) > .end-mark:not(:is(ol, ul))::after,
 .post:lang(ja):not(.noend) > .end-mark:is(ol, ul) > li:last-child::after {
-  transform: translateY(-0.06em);
+  top: -0.05em;
 }
 
 .noindent p {
